Tags and filter btn no longer shift other elements on hover

--- a/index.css
+++ b/index.css
@@ -87,6 +87,9 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    font-size: 16px;
+    height: 22px;
 }
 
 .selectBox > svg {
@@ -170,9 +173,6 @@ body, html {
 }
 
 #filters {
-    grid-row: 2;
-
-    display: flex;
     width: calc(100% - 10px);
     padding: 0;
 
@@ -450,7 +450,8 @@ body, html {
     justify-content: center;
     align-items: center;
 
-    gap: 10px;
+    column-gap: 6px;
+    row-gap: 4px;
     margin-top: 10px;
 
     width: 100%;
@@ -469,6 +470,8 @@ body, html {
     padding: 5px 10px;
     border-radius: 4px;
     font-size: 12px;
+
+    margin: 1px;
 }
 
 .tags > .js {
@@ -530,6 +533,7 @@ body, html {
     cursor: pointer;
 
     padding: 6px 11px;
+    margin: 0px;
 }
 
 .tags > span:active {
